--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/LoisiResa
 spring.datasource.username=postgres
 spring.datasource.password=root
+#spring.datasource.url=jdbc:postgresql://mydb:5432/mydb
+#spring.datasource.username=root
+#spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
